--- a/anthems.html
+++ b/anthems.html
@@ -26,8 +26,8 @@ swpg = "sw_top_pgs_anthems";
 
 <!-- InstanceEndEditable -->
 
-<link href="http://a.sitesworld.com/s/style.css" rel="stylesheet" type="text/css"/>
-<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/sitesworld" />
+<link href="//a.sitesworld.com/s/style.css" rel="stylesheet" type="text/css"/>
+<link rel="alternate" type="application/rss+xml" title="RSS" href="//feeds.feedburner.com/sitesworld" />
 </head>
 <body>
 <script type="text/javascript">
@@ -44,7 +44,7 @@ swpg = "sw_top_pgs_anthems";
 		<table class="thtbl">
 			<tr>
 				<td class="chtbltdle">
-					<a href="http://www.sitesworld.com/">sitesworld.com</a>
+					<a href="//www.sitesworld.com/">sitesworld.com</a>
 				</td>
 				<td class="chtbltdri">
 					<a href="/" title="Sitesworld Home"></a>
@@ -126,7 +126,7 @@ swpg = "sw_top_pgs_anthems";
 	</div>
 </div>
 <!--/top_footer--> 
-<script type="text/javascript" src="http://a.sitesworld.com/s/btm.js">
+<script type="text/javascript" src="//a.sitesworld.com/s/btm.js">
 </script>
 </body>
 <!-- InstanceEnd --></html>
