--- a/search.html
+++ b/search.html
@@ -37,8 +37,8 @@ n = qs.get("n");
 
 <!-- InstanceEndEditable -->
 
-<link href="http://a.sitesworld.com/s/style.css" rel="stylesheet" type="text/css"/>
-<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/sitesworld" />
+<link href="//a.sitesworld.com/s/style.css" rel="stylesheet" type="text/css"/>
+<link rel="alternate" type="application/rss+xml" title="RSS" href="//feeds.feedburner.com/sitesworld" />
 </head>
 <body>
 <script type="text/javascript">
@@ -55,7 +55,7 @@ n = qs.get("n");
 		<table class="thtbl">
 			<tr>
 				<td class="chtbltdle">
-					<a href="http://www.sitesworld.com/">sitesworld.com</a>
+					<a href="//www.sitesworld.com/">sitesworld.com</a>
 				</td>
 				<td class="chtbltdri">
 					<a href="/" title="Sitesworld Home"></a>
@@ -200,7 +200,7 @@ n = qs.get("n");
 	</div>
 </div>
 <!--/top_footer--> 
-<script type="text/javascript" src="http://a.sitesworld.com/s/btm.js">
+<script type="text/javascript" src="//a.sitesworld.com/s/btm.js">
 </script>
 </body>
 <!-- InstanceEnd --></html>
