--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html><!-- InstanceBegin template="/Templates/sw_top_pgs.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
+	<meta name="google-site-verification" content="tWuxEeaixpjAjHgWfPPw8YbOUkpxm6jI3Z-wIqdipwE" />
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" type="text/javascript">
 </script>
 <!-- InstanceBeginEditable name="headtop" -->
