--- a/contact.html
+++ b/contact.html
@@ -85,15 +85,16 @@ swpg = "sw_top_pgs_contact";
 <!-- InstanceBeginEditable name="sw_pgs_content" -->
 
  
-<!--
+ 
 <h1>Contact us<em></em></h1>
-<h2> Please use the form below to send in your comments, suggestions or feedback. </h2>
+<h2> Please select the "Feedback" button below (bottom right) to send in your message. </h2>
+<h2>Thank you very much.</h2>
 
--->
+ 
 
 
 
-<iframe style="height:470px;width:600px;overflow:hidden;display:block"  scrolling="no" frameborder="0" border="0"  src="https://docs.google.com/forms/d/1xME1UtxATHyM8eY_KEypNAddDZ9kcoMtZqTIK4kY5lM/viewform?embedded=true">Loading...</iframe>
+<!-- <iframe style="height:470px;width:600px;overflow:hidden;display:block"  scrolling="no" frameborder="0" border="0"  src="https://docs.google.com/forms/d/1xME1UtxATHyM8eY_KEypNAddDZ9kcoMtZqTIK4kY5lM/viewform?embedded=true">Loading...</iframe>  -->
 
 <!--
 <h3>* Required fields </h3>
