--- a/common/x/a/c/old_index.html
+++ b/common/x/a/c/old_index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- MODIFY *ALL* MARKED ::WEBSITE::  -->
-		<!-- NO-CONTENT_DYNAMIC_CATCHER V3 -->
+		<!-- NO-CONTENT_DYNAMIC_CATCHER V2 (add'd style) -->
+		<!-- modify marked ::WEBSITE::  -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW, NOARCHIVE"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title></title>
 		<script>
-		thsSiteTyp = "dyn_catcher"; // VAR AS  `if (thsSiteTyp == "dyn_catcher")` IN .js below /* ::WEBSITE:: */
+		thsSiteTyp = "dyn_catcher"; /* ::WEBSITE:: */
 		//
 		//
 		///////////////////  QS   //////////////////
@@ -38,10 +38,13 @@
 		var qs = new sc_qstrng();
 		///////////////////  /QS   //////////////////
 		</script>
+		<style>
+		body {margin: 0; padding: 0}
+		</style>
 	</head>
 	<body class="dyn_catcher">
 		<!-- ::WEBSITE:: -->
-		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-		<script src="https://a.sitesworld.com/str/s/store.js"></script> <!-- /* ::WEBSITE:: */ -->
+		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+		<script src="https://www.sitesworld.com/common/x/a/s/btm.js"></script>
 	</body>
 </html>
