--- a/common/x/str/c/index.html
+++ b/common/x/str/c/index.html
@@ -42,6 +42,6 @@
 	<body class="dyn_catcher">
 		<!-- ::WEBSITE:: -->
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-		<script src="https://www.sitesworld.com/x/str/s/store.js"></script> <!-- /* ::WEBSITE:: */ -->
+		<script src="https://www.sitesworld.com/common/x/str/s/store.js"></script> <!-- /* ::WEBSITE:: */ -->
 	</body>
 </html>
