--- a/common/x/str/c/index.html
+++ b/common/x/str/c/index.html
@@ -41,7 +41,7 @@
 	</head>
 	<body class="dyn_catcher">
 		<!-- ::WEBSITE:: -->
-		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> <!--  lessthan 3 for BS 3! -->
 		<script src="https://www.sitesworld.com/common/x/str/s/store.js"></script> <!-- /* ::WEBSITE:: */ -->
 	</body>
 </html>
